--- a/espm.poo.2021.1.carteira.common-main/pom.xml
+++ b/espm.poo.2021.1.carteira.common-main/pom.xml
@@ -23,6 +23,11 @@
 			<artifactId>common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+			<dependency>
+			<groupId>br.espm.poo.ativo</groupId>
+			<artifactId>common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
