--- a/espm.poo.2021.1.carteira-main/pom.xml
+++ b/espm.poo.2021.1.carteira-main/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+			<dependency>
+			<groupId>br.espm.poo.ativo</groupId>
+			<artifactId>common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
